rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Dec 16 19:09:54 2024
*filter
:INPUT DROP [31:2024]
:FORWARD DROP [0:0]
:OUTPUT DROP [52:3592]
-A INPUT -i eth1 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 123 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -d 107.155.53.0/24 -j DROP
-A FORWARD -s 172.16.2.0/24 -j ACCEPT
-A FORWARD -d 172.16.2.0/24 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -j ACCEPT
-A FORWARD -d 172.16.1.0/24 -j ACCEPT
-A OUTPUT -o eth1 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Dec 16 19:09:54 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Mon Dec 16 19:09:54 2024
*nat
:PREROUTING ACCEPT [932:117443]
:INPUT ACCEPT [5:364]
:OUTPUT ACCEPT [63:5184]
:POSTROUTING ACCEPT [11:1592]
-A POSTROUTING -s 172.16.1.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 172.16.2.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 172.16.1.0/24 -d 172.16.2.0/24 -o wlan0 -j MASQUERADE
COMMIT
# Completed on Mon Dec 16 19:09:54 2024
